Update GitHub Actions workflow to copy secrets between environments

--- a/.github/workflows/copy_secrets.yml
+++ b/.github/workflows/copy_secrets.yml
@@ -21,6 +21,7 @@ defaults:
 
 jobs:
   copy_secrets:
+    environment: ${{ inputs.source }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -29,11 +30,8 @@ jobs:
       - name: Copy secrets
         shell: pwsh
         run: |
-          $secrets_source = ('${{ toJson(secrets) }}') # | ConvertFrom-Json -AsHashTable)
+          $secrets_source = ('${{ toJson(secrets) }}' | ConvertFrom-Json -AsHashTable)
 
-          $secrets_source > ./secrets.json
-
-      - name: Upload secrets
-        uses: actions/upload-artifact@v4.6.1
-        with:
-          path: ./secrets.json
+          foreach($s in $secrets_source.GetEnumerator()) {
+            gh secret set $($s.Name) -b $($s.Value) --env ${{ inputs.destination }}
+          }
