Add GH_TOKEN environment variable to GitHub Actions workflow for secret copying

--- a/.github/workflows/copy_secrets.yml
+++ b/.github/workflows/copy_secrets.yml
@@ -19,6 +19,9 @@ defaults:
   run:
     shell: pwsh
 
+env:
+  GH_TOKEN: ${{ github.token }}
+
 jobs:
   copy_secrets:
     environment: ${{ inputs.source }}
