Update GH_TOKEN in GitHub Actions workflow to use secrets for enhanced security

--- a/.github/workflows/copy_secrets.yml
+++ b/.github/workflows/copy_secrets.yml
@@ -20,7 +20,7 @@ defaults:
     shell: pwsh
 
 env:
-  GH_TOKEN: ${{ github.token }}
+  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   copy_secrets:
