Install Git credential helper extension in GitHub Actions workflow for improved secret management

--- a/.github/workflows/copy_secrets.yml
+++ b/.github/workflows/copy_secrets.yml
@@ -19,9 +19,6 @@ defaults:
   run:
     shell: pwsh
 
-env:
-  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
 jobs:
   copy_secrets:
     environment: ${{ inputs.source }}
@@ -33,6 +30,10 @@ jobs:
       - name: Copy secrets
         shell: pwsh
         run: |
+
+          gh extension install jongio/gh-setup-git-credential-helper
+          gh setup-git-credential-helper
+
           $secrets_source = ('${{ toJson(secrets) }}' | ConvertFrom-Json -AsHashTable)
 
           foreach($s in $secrets_source.GetEnumerator()) {
