--- a/.github/workflows/copy_secrets.yml
+++ b/.github/workflows/copy_secrets.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Copy secrets
         shell: pwsh
         run: |
-
+          echo ${{ secrets.GH_TOKEN }} | gh auth login --with-token
           gh extension install jongio/gh-setup-git-credential-helper
           gh setup-git-credential-helper
 
