--- a/.github/workflows/copy_secrets.yml
+++ b/.github/workflows/copy_secrets.yml
@@ -30,6 +30,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
 
+      - name: clear var
+        shell: bash
+        run: |
+          export GITHUB_TOKEN=
+
       - name: Copy secrets
         shell: pwsh
         run: |
