Retrieve and filter environment secrets in copy_secrets workflow for improved secret management

--- a/.github/workflows/copy_secrets.yml
+++ b/.github/workflows/copy_secrets.yml
@@ -44,6 +44,10 @@ jobs:
 
           $secrets_source = ('${{ toJson(secrets) }}' | ConvertFrom-Json -AsHashTable)
 
+          $env_secrets = gh secret list -e ${{ inputs.source }} --json name | ConvertFrom-Json
+
+          $secrets = $secrets_source | Where-Object { $_.Name -in $env_secrets.name }
+
           foreach($s in $secrets_source.GetEnumerator()) {
             gh secret set $($s.Name) -b $($s.Value) --env ${{ inputs.destination }}
           }
