--- a/.github/workflows/copy_secrets.yml
+++ b/.github/workflows/copy_secrets.yml
@@ -46,8 +46,8 @@ jobs:
 
           $env_secrets = gh secret list -e ${{ inputs.source }} --json name | ConvertFrom-Json
 
-          $secrets = $secrets_source | Where-Object { $_.Name -in $env_secrets.name }
-
           foreach($s in $secrets_source.GetEnumerator()) {
-            gh secret set $($s.Name) -b $($s.Value) --env ${{ inputs.destination }}
+            if ($s.Name -in $env_secrets.name) {
+              gh secret set $($s.Name) -b $($s.Value) --env ${{ inputs.destination }}
+            }
           }
