Add check_secrets job to validate secrets in copy_secrets workflow

--- a/.github/workflows/copy_secrets.yml
+++ b/.github/workflows/copy_secrets.yml
@@ -45,9 +45,23 @@ jobs:
           $secrets_source = ('${{ toJson(secrets) }}' | ConvertFrom-Json -AsHashTable)
 
           $env_secrets = gh secret list -e ${{ inputs.source }} --json name | ConvertFrom-Json
-
+          $x = 1
           foreach($s in $secrets_source.GetEnumerator()) {
             if ($s.Name -in $env_secrets.name) {
               gh secret set $($s.Name) -b $($s.Value) --env ${{ inputs.destination }}
             }
           }
+
+  check_secrets:
+    environment: ${{ inputs.destination }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4.1.1
+
+      - name: Check secrets
+        shell: pwsh
+        run: |
+          $secrets_destination = ('${{ toJson(secrets) }}' | ConvertFrom-Json -AsHashTable)
+
+          $secrets_destination | ConvertTo-Json
