--- a/.github/workflows/copy_secrets.yml
+++ b/.github/workflows/copy_secrets.yml
@@ -35,22 +35,22 @@ jobs:
         run: |
           export GITHUB_TOKEN=
 
-      - name: Copy secrets
-        shell: pwsh
-        run: |
-          echo ${{ secrets.GH_TOKEN }} | gh auth login --with-token
-          gh extension install jongio/gh-setup-git-credential-helper
-          gh setup-git-credential-helper
+      # - name: Copy secrets
+      #   shell: pwsh
+      #   run: |
+      #     echo ${{ secrets.GH_TOKEN }} | gh auth login --with-token
+      #     gh extension install jongio/gh-setup-git-credential-helper
+      #     gh setup-git-credential-helper
 
-          $secrets_source = ('${{ toJson(secrets) }}' | ConvertFrom-Json -AsHashTable)
+      #     $secrets_source = ('${{ toJson(secrets) }}' | ConvertFrom-Json -AsHashTable)
 
-          $env_secrets = gh secret list -e ${{ inputs.source }} --json name | ConvertFrom-Json
-          $x = 1
-          foreach($s in $secrets_source.GetEnumerator()) {
-            if ($s.Name -in $env_secrets.name) {
-              gh secret set $($s.Name) -b $($s.Value) --env ${{ inputs.destination }}
-            }
-          }
+      #     $env_secrets = gh secret list -e ${{ inputs.source }} --json name | ConvertFrom-Json
+      #     $x = 1
+      #     foreach($s in $secrets_source.GetEnumerator()) {
+      #       if ($s.Name -in $env_secrets.name) {
+      #         gh secret set $($s.Name) -b $($s.Value) --env ${{ inputs.destination }}
+      #       }
+      #     }
 
   check_secrets:
     environment: ${{ inputs.destination }}
@@ -65,3 +65,13 @@ jobs:
           $secrets_destination = ('${{ toJson(secrets) }}' | ConvertFrom-Json -AsHashTable)
 
           $secrets_destination | ConvertTo-Json
+          $x = 1
+          foreach($s in $secrets_destination.GetEnumerator()) {
+            if ($s.Name -in $env_secrets.name) {
+              echo "Secret $x: $($s.Name)"
+              if ($s.Value -eq "SECRET$($x)") {
+                Write-Host "$($s.Name) is correct!"
+              }
+              $x++
+            }
+          }
