Fix echo statement in copy_secrets workflow to remove unnecessary index in secret output

--- a/.github/workflows/copy_secrets.yml
+++ b/.github/workflows/copy_secrets.yml
@@ -68,7 +68,7 @@ jobs:
           $x = 1
           foreach($s in $secrets_destination.GetEnumerator()) {
             if ($s.Name -in $env_secrets.name) {
-              echo "Secret $x: $($s.Name)"
+              echo "Secret $($s.Name)"
               if ($s.Value -eq "SECRET$($x)") {
                 Write-Host "$($s.Name) is correct!"
               }
