--- a/.github/workflows/test-error.yml
+++ b/.github/workflows/test-error.yml
@@ -17,12 +17,18 @@ jobs:
 
       - name: Test sending error
         run: |
-          [xml]$fail = '<return "><root :empty"><Exception :exception" /><Messages :exception"><Error ErrorCode="-1052311368" Description="The request to alter the semantic model was rejected because of insufficient permissions. In addition to Write permissions on the model, make sure you also have at least Use permissions on all data connections that the semantic model uses. Verify the connection configuration in the semantic model settings and contact the connection owner(s) to grant you the required permissions. See https://go.microsoft.com/fwlink/?linkid=2256853 to learn more.
+          [xml]$fail = '<return xmlns="urn:schemas-microsoft-com:xml-analysis">
+            <root xmlns="urn:schemas-microsoft-com:xml-analysis:empty">
+              <Exception xmlns="urn:schemas-microsoft-com:xml-analysis:exception" />
+              <Messages xmlns="urn:schemas-microsoft-com:xml-analysis:exception">
+                <Error ErrorCode="-1052311368" Description="The request to alter the semantic model was rejected because of insufficient permissions. In addition to Write permissions on the model, make sure you also have at least Use permissions on all data connections that the semantic model uses. Verify the connection configuration in the semantic model settings and contact the connection owner(s) to grant you the required permissions. See https://go.microsoft.com/fwlink/?linkid=2256853 to learn more.
 
-          Technical Details:
-          RootActivityId: bb8e9c6c-0f65-41ba-ba09-8c411efd84ab
-          Date (UTC): 8/26/2025 8:11:01 PM" Source="Microsoft Analysis Services" HelpFile="" /></Messages></root></return>
-          '
+                  Technical Details:
+                    RootActivityId: bb8e9c6c-0f65-41ba-ba09-8c411efd84ab
+                    Date (UTC): 8/26/2025 8:11:01 PM" Source="Microsoft Analysis Services" HelpFile="" />
+              </Messages>
+            </root>
+          </return>'
           $xml  = $fail
 
           if( $xml.InnerXml -match '<Error '){
