--- a/.github/workflows/test-error.yml
+++ b/.github/workflows/test-error.yml
@@ -48,8 +48,8 @@ jobs:
           <details><summary>Raw XML</summary>
 
           ```xml
-          $xml.OuterXml
-          .```
+          "$($xml.OuterXml)"
+          ```
 
           </details>
           "@
